--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -1,17 +1,18 @@
 ---
 interface Props {
-	date: Date;
+	date: string;
 }
 
 const { date } = Astro.props;
 ---
 
-<time datetime={date.toISOString()}>
+<time datetime={date}>
 	{
-		date.toLocaleDateString('en-us', {
+		new Date(date).toLocaleDateString('en-us', {
 			year: 'numeric',
 			month: 'short',
 			day: 'numeric',
+			timeZone: 'UTC'
 		})
 	}
 </time>
