--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -3,12 +3,10 @@ import BaseHead from '../../components/BaseHead.astro';
 import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
-import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
+import client from '../../../tina/__generated__/client';
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-);
+const {data: {blogConnection: {edges: blogEdges}}} = await client.queries.blogConnection();
 ---
 
 <!doctype html>
@@ -91,13 +89,13 @@ const posts = (await getCollection('blog')).sort(
 			<section>
 				<ul>
 					{
-						posts.map((post) => (
+						blogEdges?.map((blogEdge) => (
 							<li>
-								<a href={`/blog/${post.slug}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
-									<h4 class="title">{post.data.title}</h4>
+								<a href={`/blog/${blogEdge!.node!.slug}/`}>
+									<img width={720} height={360} src={blogEdge!.node!.heroImage} alt="" />
+									<h4 class="title">{blogEdge!.node!.title}</h4>
 									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
+										<FormattedDate date={blogEdge!.node!.pubDate} />
 									</p>
 								</a>
 							</li>
