--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,11 +1,11 @@
 ---
-import type { CollectionEntry } from 'astro:content';
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
+import type { BlogPartsFragment } from '../../tina/__generated__/types';
 
-type Props = CollectionEntry<'blog'>['data'];
+type Props = BlogPartsFragment;
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
