--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,8 +5,11 @@ import Layout from '../layouts/BlogPost.astro';
 <Layout
 	title="About Me"
 	description="Lorem ipsum dolor sit amet"
-	pubDate={new Date('August 08 2021')}
+	pubDate={'August 08 2021'}
 	heroImage="/blog-placeholder-about.jpg"
+	slug='about'
+	body=""
+	__typename='Blog'
 >
 	<p>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
